# VetoMCP

./: .env.example  .gitignore  DEDALUS_DEPLOY.md  README.md  agent_guard_migration.sql  auth.py  database.py  fastapi_app.py  main.py  mcp_server.py  models.py  package-lock.json  package.json  pyproject.toml  requirements.txt  server.py  tsconfig.json  veto.db
.claude/: settings.local.json
routes/: budgets.py  transactions.py
services/: budget_rule_service.py  budget_service.py  transaction_service.py
src/: database.ts  index.ts  schemas.ts
src/tools/: local-tools.ts  server-tools.ts
supabase/: config.toml
supabase/migrations/: 20260207172935_create_veto_tables.sql
tools/: __init__.py  agent_guard_rails.py  categories.py  dashboard.py  local.py  rules.py  transactions.py
